# budgeteer

./: Cargo.toml  LICENSE
.github/workflows/: budgeteer.yml
Budgeteer.app/Contents/: Info.plist
Budgeteer.app/Contents/Resources/: applet.rsrc
Budgeteer.app/Contents/Resources/Scripts/: main.scpt
migrations/: 01-create-tables.sql  02-prefill-tables.sql
src/: calculator.rs  duplicate_check.rs  error.rs  file_reader.rs  file_writer.rs  main.rs  month.rs  printer.rs  rate_provider.rs  verbosity.rs  wizard.rs
src/amount_converter/: exchange_rates.rs  mod.rs
src/commands/: analyze.rs  import.rs  mod.rs  show_types.rs  wizard.rs
src/currency/: amount_converter.rs  currency_data.rs  exchange_rate.rs  exchange_rate_provider.rs  mod.rs
src/file/: file_reader.rs  file_writer.rs  mod.rs
src/filter/: mod.rs  request.rs
src/import/: json.rs  mod.rs
src/import/markdown/: file_reader.rs  invoice_parser.rs  mod.rs  transaction_parser.rs
src/invoice/: amount.rs  invoice_parser.rs  invoice_type.rs  mod.rs
src/markdown/: invoice_parser.rs  mod.rs
src/persistence/: exchange_rate_repository.rs  invoice_repository.rs  mod.rs  transaction_repository.rs
src/printer/: chart.rs  color.rs  mod.rs
src/transaction/: amount.rs  main_transaction_data.rs  mod.rs  transaction_type.rs
src/wizard/: amount.rs  currency.rs  date.rs  invoice_type.rs  mod.rs  note.rs  transaction_type.rs
tests/: single-line.md
