[package]
name = "budgeteer"
version = "2.0.0-dev"
authors = ["Daniel Corn <info@corn.rest>"]
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
chrono = ">=0.4.20"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = { version = "^0.11.0", features = ["completion"] }
lazy_static = "1.4.0"
reqwest = "^0.11.2"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.42.0", features = ["full"] }
