[package]
name = "budgeteer"
version = "2.0.0-dev"
authors = ["Daniel Corn <info@corn.rest>"]
edition = "2021"

[dependencies]
chrono = { version = ">=0.4.20", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
dialoguer = { version = "^0.11.0", features = ["completion", "fuzzy-select"] }
lazy_static = "1.4.0"
regex = "1.11.1"
reqwest = "^0.11.2"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono" ] }
tokio = { version = "1.42.0", features = ["full"] }
unicode-segmentation = "1.12.0"
